--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   "devDependencies": {
     "typescript": "^5.5.3"
   },
-  "private": true,
+  "private": true
 
-  "scripts": {
-    "build": "tsc && cp src/index.html dist/index.html"
-  }
+
 
 }
